<resources>
    <string name="app_name">TrackMe</string>
    <string name="text_welcome">Hello big boi :)</string>
    <string name="text_credentials">Credentials</string>
    <string name="text_personal_data">Personal Data</string>
    <string name="text_organization_data">Organization Data</string>
    <string name="text_company_name">Organization Data</string>
    <string name="text_subscribe">Subscribe</string>
    <string name="text_motivation">Motivation (Optional)</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_logging_out">Logging out...</string>
    <string name="text_view_old_requests">View Old Requests</string>
    <string name="text_no_request_received">No request received yet!</string>
    <string name="text_not_implemented">Not Implemented :(</string>
    <string name="text_remember_me">Remember me</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_ssn">SSN</string>
    <string name="hint_birthdate">Birthdate</string>
    <string name="hint_height">Height</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_state">State</string>
    <string name="hint_city">City</string>
    <string name="hint_address">Address</string>
    <string name="hint_vat">VAT</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_title">Title</string>
    <string name="hint_new_username">New Username</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_organization_name">Organization Name</string>
    <string name="button_view_data">View Data</string>
    <string name="button_new_request">New Request</string>
    <string name="button_signup">Signup</string>
    <string name="button_login">Login</string>
    <string name="button_accept">Accept</string>
    <string name="button_back">Back</string>
    <string name="button_create">Create</string>
    <string name="button_change_credentials">Change Credentials</string>
    <string name="button_change_new_request">New Request</string>
    <string name="button_change_view_data">View Data</string>
    <string name="button_view_requests">View Requests</string>
    <string name="switch_automated_sos">Automated Sos</string>
    <string name="button_created_runs">Created Runs</string>
    <string name="button_watched_runs">Watched Runs</string>
    <string name="button_enrolled_runs">Enrolled Runs</string>
    <string name="button_search_runs">Search Runs</string>
    <string name="button_change_username">Change Username</string>
    <string name="button_change_password">Change Password</string>
    <string name="tab_individual">Individual</string>
    <string name="tab_third_party">Third Party</string>
    <string name="tab_request_group">Group</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string-array name="group_request_criteria">
        <item>Firstname</item>
        <item>Lastname</item>
        <item>Birthdate</item>
        <item>State</item>
        <item>City</item>
        <item>Address</item>
        <item>Height</item>
        <item>Weight</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_run_map">Map</string>
</resources>
