<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_change_credentials"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangeCredentialsActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="242dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_change_credentials_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_username"
                android:maxLength="@integer/default_length" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_change_credentials_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_change_username" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="49dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="242dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_change_credentials_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:maxLength="@integer/default_length" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="242dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_change_credentials_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_repeat_password"
                android:inputType="textPassword"
                android:maxLength="@integer/default_length" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_change_credentials_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_change_password" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>